apps/rpilab-router/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rpilab-router
  labels: &labels
    app.kubernetes.io/part-of: rpilab-router
    app.kubernetes.io/name: rpilab-router
    app.kubernetes.io/instance: rpilab-router
spec:
  selector:
    matchLabels: *labels
  template:
    metadata:
      labels: *labels
    spec:
      replicas: 1
      containers:
      - name: app
        image: ghcr.io/alexandreroman/rpilab-router
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8080
        resources:
          requests:
            cpu: 100m
            memory: 64M
          limits:
            cpu: 500m
            memory: 64M
        readinessProbe:
          httpGet:
            path: /readyz
            port: 8080
            scheme: HTTP
        livenessProbe:
          httpGet:
            path: /livez
            port: 8080
            scheme: HTTP
        securityContext:
          allowPrivilegeEscalation: false
          capabilities:
            drop:
            - ALL
          runAsNonRoot: true
          runAsUser: 1000
          seccompProfile:
            type: RuntimeDefault
